# cli-agent-transcripts

./: .gitignore  GEMINI.md  README.md  pyproject.toml
src/cc_transcripts/: ai.py  formatter.py  html_formatter.py  html_resources.py  main.py  parsers.py
