[project]
name = "cc-transcripts"
version = "0.1.0"
description = "A tool to save Gemini CLI and Claude Code transcripts to HTML."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "llm>=0.19.0",
    "llm-gemini>=0.6.0",
    "markdown>=3.0.0",
]

[project.scripts]
cc-transcripts = "cc_transcripts.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
